src/components/Landing/Landing.module.css
.section {
  background-color: var(--color-primary);
  color: var(--color-text-on-primary);
  height: max-content;
  width: 100vw;
  display: flex;
  flex-direction: column;
}

/* Text styles  */

.textContainer {
  display: flex;
  flex-direction: column;
  margin: auto;
  width: 100%;
  text-align: center;
  padding: 40px;
}

.sectionHeading {
  text-align: center;
  grid-area: heading;
  font-size: 4rem;
}

.sectionParagraph {
  font: var(--p);
  color: var(--soft-text);
  grid-area: text;
  margin-top: 20px;
}

.headingRoyal {
  font-family: var(--ff-secondary);
}

/* hero image styles */
.heroContainer {
  position: relative;
  bottom: 0;
  right: 0;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(5, 1fr);
}

.heroImage {
  max-width: 850px;
  max-height: 530px;
  filter: drop-shadow(0 0 15px var(--bg-dark));
  grid-row: 2 / 6;
  grid-column: 1 / 6;
}

.halo {
  grid-row: 1 / 4;
  grid-column: 2 / 3;
  width: 300px;
  height: 300px;
  background-color: var(--color-secondary);
  border: 10px solid white;
  border-radius: 100%;
}

/* Button styles */

.btn {
  background-color: var(--color-primary);
  border: 2px solid var(--color-text-on-primary);
  border-radius: 10px;
  font: var(--p);
  font-weight: bold;
  box-shadow: 0 0 15px 1px var(--bg-dark);
  grid-area: btn;
  margin-top: 100px;
  height: 100px;
  width: 350px;
  margin-inline: auto;
}

/* @media (min-width: 1024px) {
  .heroImage {
    position: absolute;
    right: 0px;
    bottom: 0px;
  }

  .textContainer {
    display: grid;
    grid-template-areas:
      "heading    heading"
      "text       ."
      "btn        .";
  }
} */

